--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.0.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
@@ -21,6 +22,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-scroll": "^1.9.0",
+    "tailwind-merge": "^2.5.4",
     "vitest": "^2.1.1"
   },
   "devDependencies": {
